--- a/AM43/config.json
+++ b/AM43/config.json
@@ -7,6 +7,11 @@
     "boot": "auto",
     "host_network": true,
     "hassio_api": true,
+    "arch": [
+      "amd64",
+      "armv7",
+      "aarch64"
+    ],
     "privileged": [
       "NET_ADMIN"
     ],
