attempt to fix build

--- a/AM43/Dockerfile
+++ b/AM43/Dockerfile
@@ -1,11 +1,11 @@
-ARG BUILD_FROM
+ARG BUILD_FROM=hassioaddons/base
 FROM $BUILD_FROM
 
 ENV LANG C.UTF-8
 
 ADD package.json /
 
-RUN apk add --no-cache nodejs-npm jq && \
+RUN apk add --no-cache nodejs-npm make python3 gcc git jq && \
 npm install
 
 # Copy data for add-on
