attempt to fix build

--- a/AM43/Dockerfile
+++ b/AM43/Dockerfile
@@ -1,12 +1,15 @@
 ARG BUILD_FROM=hassioaddons/base
 FROM $BUILD_FROM
 
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+
 ENV LANG C.UTF-8
 
 ADD package.json /
 
-RUN apk add --no-cache nodejs-npm make python3 gcc git jq && \
-npm install
+RUN apk add --no-cache --virtual .build-dependencies nodejs-npm make libusb-dev python3 gcc g++ git jq && \
+npm install -g node-gyp && npm install
+RUN apk del .build-dependencies make libusb-dev python3 gcc g++ git
 
 # Copy data for add-on
 COPY run.sh /
