--- a/AM43/Dockerfile
+++ b/AM43/Dockerfile
@@ -7,9 +7,9 @@ ENV LANG C.UTF-8
 
 ADD package.json /
 
-RUN apk add --no-cache .build-dependencies nodejs-npm make libusb-dev python3 gcc g++ git jq && \
+RUN apk add --no-cache nodejs-npm make libusb-dev python3 gcc g++ git jq && \
 npm install -g node-gyp && npm install
-RUN apk del .build-dependencies make libusb-dev python3 gcc g++ git
+RUN apk del make libusb-dev python3 gcc g++ git
 
 # Copy data for add-on
 COPY run.sh /
