change default host sample

--- a/BroadlinkOEMT12MQTT/config.json
+++ b/BroadlinkOEMT12MQTT/config.json
@@ -19,7 +19,7 @@
       "share:rw"
     ],
     "options": {
-      "mqttHost": "mqtt://localhost",
+      "mqttHost": "localhost",
       "mqttUser": "user",
       "mqttPassword": "password",
       "airConIp": "ip",
