--- a/AM43/config.json
+++ b/AM43/config.json
@@ -7,6 +7,7 @@
     "boot": "auto",
     "host_network": true,
     "hassio_api": true,
+    "init": false,
     "arch": [
       "amd64",
       "armv7",
